[package]
name = "memfd_path"
version = "0.1.1"
authors = ["Evan Richter <evanjrichter@gmail.com>"]
repository = "https://github.com/evanrichter/memfd_path"
description = "A hacky way to load an in-memory file and get a path on Linux"
license = "MIT"
categories = ["development-tools::testing"]
edition = "2021"


[dependencies]
memfd = "0.6.0"
